--- a/randomizer_2/index.html
+++ b/randomizer_2/index.html
@@ -11,21 +11,22 @@
 
 <body>
 
-  <div class="one">
-    <div class="two">
-    <h1>おみくじ omikuji</h1>
-    <p class="navy" id="firstp">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h1>おみくじ</h1>
+  <h2>[omikuji]</h2>
+  <div class="row">
+    <div class="one column">
+      <p>Omikuji are random fortunes written on strips of paper at Shinto shrines and Buddhist temples in Japan. Literally "sacred lot", these are usually received by making a small offering (generally a five-yen coin as it is considered good luck)
+        and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a stick with a number falls out. The number would then correspond to a specific fortune slip.</p>
     </div>
-    </div>
-    <div class="two one">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="two column">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <script src="sketch.js"></script>
   </div>
 
-  </div>
+
 
 </body>
 
