--- a/randomizer_2/index.html
+++ b/randomizer_2/index.html
@@ -15,8 +15,7 @@
   <h2>[omikuji]</h2>
   <div class="row">
     <div class="one column">
-      <p>Omikuji are random fortunes written on strips of paper at Shinto shrines and Buddhist temples in Japan. Literally "sacred lot", these are usually received by making a small offering (generally a five-yen coin as it is considered good luck)
-        and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a stick with a number falls out. The number would then correspond to a specific fortune slip.</p>
+      <p>Omikuji are random fortunes written on strips of paper at Shinto shrines and Buddhist temples in Japan. Literally "sacred lot", these are usually received by making a small offering (generally a five-yen coin as it is considered good luck) and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a wooden stick with a number labeled on it (omikuji hashi) falls out. The number would then correspond to a specific fortune slip.</p>
     </div>
     <div class="two column">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
