--- a/randomizer_3/index.html
+++ b/randomizer_3/index.html
@@ -18,7 +18,7 @@
       <div class="one column">
         <p>Omikuji are random fortunes written on strips of paper at Shinto shrines and Buddhist temples in Japan. Literally "sacred lot", these are usually received by making a small offering (generally a five-yen coin as it is considered good
           luck)
-          and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a wooden stick with a number labeled on it (omikuji hashi) falls out. The number would then
+          and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a wooden stick with a number label (omikuji hashi) falls out. The number would then
           correspond <br>to a specific fortune slip.</p>
       </div>
       <div class="two column">
