--- a/randomizer_3/index.html
+++ b/randomizer_3/index.html
@@ -22,9 +22,7 @@
           correspond <br>to a specific fortune slip.</p>
       </div>
       <div class="two column">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-          aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>The individual fortunes contain a general fortune that can range from great blessing (大吉) to great curse (大凶). Specific aspects of one's life are then listed, which can include any number of possible combinations depending on the shrine and/or temple in question. In this case, the aspects included are romantic relationships (恋愛), illness (病気), money luck (金錢運), and lucky item (吉祥物). Feel free to try your luck! Just press the button below!</p>
         <div id="randomizerButton"></div>
       </div>
     </div>
