--- a/randomizer_3/index.html
+++ b/randomizer_3/index.html
@@ -18,11 +18,11 @@
       <div class="one column">
         <p>Omikuji are random fortunes written on strips of paper at Shinto shrines and Buddhist temples in Japan. Literally "sacred lot", these are usually received by making a small offering (generally a five-yen coin as it is considered good
           luck)
-          and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method would be to shake an omikuji box until a wooden stick with a number label (omikuji hashi) falls out. The number would then
-          correspond <br>to a specific fortune slip.</p>
+          and randomly choosing one from a box, hoping for the resulting fortune to be good. Another method of getting a fortune slip would be to shake an omikuji box until a wooden stick with a number label falls out. The number on the stick would then
+          correspond to a specific set of fortune slips.</p>
       </div>
       <div class="two column">
-        <p>The individual fortunes contain a general fortune that can range from great blessing (大吉) to great curse (大凶). Specific aspects of one's life are then listed, which can include any number of possible combinations depending on the shrine and/or temple in question. In this case, the aspects included are romantic relationships (恋愛), illness (病気), money luck (金錢運), and lucky item (吉祥物). Feel free to try your luck! Just press the button below!</p>
+        <p>The individual fortunes contain a general fortune that can range from great blessing (<span class="chinese">大吉</span>) to great curse (<span class="chinese">大凶</span>). Specific aspects of one's life are then listed, which can include any number of possible combinations depending on the shrine and/or temple in question. In this case, the aspects included are romantic relationships (<span class="chinese">恋愛</span>), illness (<span class="chinese">病気</span>), money luck (<span class="chinese">金錢運</span>), and lucky item (<span class="chinese">吉祥物</span>). Feel free to try your luck! Just press the button below!</p>
         <div id="randomizerButton"></div>
       </div>
     </div>
