--- a/randomizer_3/index.html
+++ b/randomizer_3/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="whitebg">
-    <h1> お みくじ</h1>
+    <h1> <a href="https://cwei033.github.io/randomizer/randomizer_3/" id="title">お みくじ</a></h1>
     <h2>[omikuji]</h2>
     <div class="row">
       <div class="one column">
